--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,5 +1,5 @@
 steps:
-  - name: "python:3.10-slim"
+  - name: "python:3.10"
     args: ["pip", "install", "-r", "requirements.txt"]
   - name: "gcr.io/cloud-builders/python"
     args: ["python", "manage.py", "migrate"]
