--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,9 +1,36 @@
-steps:
-  - name: "python:3.10"
-    args: ["pip", "install", "-r", "requirements.txt"]
-  - name: "gcr.io/cloud-builders/python"
-    args: ["python", "manage.py", "migrate"]
-  - name: "gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy", "--quiet"]
+# steps:
+#   - name: "python:3.10"
+#     args: ["pip", "install", "-r", "requirements.txt"]
+#   - name: "gcr.io/cloud-builders/python"
+#     args: ["python", "manage.py", "migrate"]
+#   - name: "gcr.io/cloud-builders/gcloud"
+#     args: ["app", "deploy", "--quiet"]
+# options:
+#   logging: CLOUD_LOGGING_ONLY
+
 options:
   logging: CLOUD_LOGGING_ONLY
+
+steps:
+  # Step 1: Use a base Python image to install dependencies
+  - name: "python:3.10"
+    entrypoint: "bash"
+    args:
+      - "-c"
+      - |
+        apt-get update && apt-get install -y gcc libmysqlclient-dev
+        pip install -r requirements.txt
+
+  # Step 2: Run Django migrations (if needed)
+  - name: "python:3.10"
+    args: ["python", "manage.py", "migrate"]
+
+  # Step 3: Deploy the application to Google Cloud
+  - name: "gcr.io/cloud-builders/gcloud"
+    args: ["app", "deploy", "--quiet"]
+
+  # Optional: Store logs in a custom bucket
+  - name: "gcr.io/cloud-builders/gcloud"
+    args: ["logging", "write", "build-logs", "--severity", "INFO"]
+
+timeout: "1200s"
