--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,7 +7,7 @@
 #     args: ["app", "deploy", "--quiet"]
 steps:
   # Step 1: Use an official Python image to install dependencies
-  - name: "python:3.10"
+  - name: "python:3.10-slim"
     entrypoint: "bash"
     args:
       - "-c"
@@ -16,7 +16,7 @@ steps:
         pip install -r requirements.txt
 
   # Step 2: Run Django migrations (if needed)
-  - name: "python:3.10"
+  - name: "python:3.10-slim"
     args: ["python", "manage.py", "migrate"]
 
   # Step 3: Deploy the application to Google Cloud
