--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,27 +1,25 @@
-# steps:
-#   - name: "python:3.10"
-#     args: ["pip", "install", "-r", "requirements.txt"]
-#   - name: "gcr.io/cloud-builders/python"
-#     args: ["python", "manage.py", "migrate"]
-#   - name: "gcr.io/cloud-builders/gcloud"
-#     args: ["app", "deploy", "--quiet"]
 steps:
-  # Step 1: Use an official Python image to install dependencies
-  - name: "python:3.10-slim"
-    entrypoint: "bash"
+  # Step 1: Install dependencies using the Python image
+  - name: "gcr.io/cloud-builders/python"
     args:
-      - "-c"
-      - |
-        apt-get update && apt-get install -y gcc libmysqlclient-dev
-        pip install -r requirements.txt
+      - "pip"
+      - "install"
+      - "-r"
+      - "requirements.txt"
 
-  # Step 2: Run Django migrations (if needed)
-  - name: "python:3.10-slim"
-    args: ["python", "manage.py", "migrate"]
+  # Step 2: Run Django migrations (optional but recommended for fresh deployments)
+  - name: "gcr.io/cloud-builders/python"
+    args:
+      - "python"
+      - "manage.py"
+      - "migrate"
 
-  # Step 3: Deploy the application to Google Cloud
+  # Step 3: Deploy to Google Cloud App Engine
   - name: "gcr.io/cloud-builders/gcloud"
-    args: ["app", "deploy", "--quiet"]
+    args:
+      - "app"
+      - "deploy"
+      - "--quiet"
 
 options:
   logging: CLOUD_LOGGING_ONLY
