--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,7 +1,7 @@
 steps:
   - name: "python:3.10"
     args: ["pip", "install", "-r", "requirements.txt"]
-  - name: "gcr.io/cloud-builders/python"
+  - name: "python:3.10"
     args: ["python", "manage.py", "migrate"]
   - name: "gcr.io/cloud-builders/gcloud"
     args: ["app", "deploy", "--quiet"]
