--- a/app.yaml
+++ b/app.yaml
@@ -20,8 +20,7 @@ env_variables:
   DB_NAME: blood
   DB_USER: root
   DB_PASSWORD: Rgipt123
-  DB_HOST: blood-bank-442312:us-central1:blood
-  DB_PORT: 3306
+  DB_HOST: 34.121.207.214
   SECRET_KEY: +zy!9k=9pql5gz9bkqjore)k6r!%w0atk(@(!(!zvp5e(t2i8n
   EMAIL_HOST_USER: 22cs3064@rgipt.ac.in
   EMAIL_HOST_PASSWORD: UJku@7890
