--- a/app.yaml
+++ b/app.yaml
@@ -21,6 +21,7 @@ env_variables:
   DB_USER: root
   DB_PASSWORD: Rgipt123
   DB_HOST: 34.121.207.214
+  DB_PORT: 3306
   SECRET_KEY: +zy!9k=9pql5gz9bkqjore)k6r!%w0atk(@(!(!zvp5e(t2i8n
   EMAIL_HOST_USER: 22cs3064@rgipt.ac.in
   EMAIL_HOST_PASSWORD: UJku@7890
